--- a/starter-code/assets/css/base.css
+++ b/starter-code/assets/css/base.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background: #fff;
+  background: rgba(192, 41, 41, 0.692);
   font-family: 'Gugi', cursive;
   font-size: 19pt;
   font-weight: 300;
