--- a/starter-code/assets/css/layout.css
+++ b/starter-code/assets/css/layout.css
@@ -1659,7 +1659,7 @@ form textarea {
   form input[type="password"]:focus,
   form select:focus,
   form textarea:focus {
-    box-shadow: 0 0 2px 1px #8ebebc;
+    box-shadow: 0 0 2px 1px #232727;
     background: #fff;
   }
 
@@ -1738,7 +1738,7 @@ button,
   color: #fff !important;
   text-decoration: none;
   padding: 0.75em 2.5em 0.75em 2.5em;
-  background-color: #8ebebc;
+  background-color: #2a2e2e;
   border: 0;
   cursor: pointer;
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -1756,7 +1756,7 @@ button,
   input[type="reset"]:hover,
   button:hover,
   .button:hover {
-    background-color: #9ececc;
+    background-color: #201c1ca1;
   }
 
   input[type="button"]:active,
@@ -1764,7 +1764,7 @@ button,
   input[type="reset"]:active,
   button:active,
   .button:active {
-    background-color: #7eaeac;
+    background-color: #2b2929d0;
   }
 
 /* Item */
@@ -1775,7 +1775,7 @@ button,
 }
 
   .item header {
-    background: #fff;
+    background: rgba(180, 178, 178, 0.555);
     margin: 0;
     padding: 1em 0 1em 0;
     font-size: 0.8em;
@@ -1793,7 +1793,7 @@ button,
 
   .icon:before {
     display: inline-block;
-    font-family: 'Gugi', cursive;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.25em;
     text-decoration: none;
     font-style: normal;
@@ -1822,7 +1822,7 @@ button,
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  background: #222629 url("images/overlay.png");
+  background: #363434b4 url("images/overlay.png");
   box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
   color: #fff;
   height: 100%;
@@ -1945,7 +1945,7 @@ button,
       }
 
         #nav ul li a.active span:before {
-          color: #e27689;
+          color: #f1e9eae5;
         }
 
 /* Footer */
@@ -1953,7 +1953,7 @@ button,
 #footer {
   margin-left: 375px;
   text-align: center;
-  background-color: #dce3e2;
+  background-color: #2a201fb9;
   padding: 3em 0 4em 0;
   box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
   font-size: 0.8em;
@@ -1967,7 +1967,7 @@ button,
     #footer .copyright li {
       display: inline-block;
       line-height: 1em;
-      border-left: solid 1px rgba(128, 128, 128, 0.35);
+      border-left: solid 1px rgba(41, 32, 32, 0.35);
       padding: 0 0 0 0.5em;
       margin: 0 0 0 0.5em;
     }
