--- a/starter-code/assets/css/layout.css
+++ b/starter-code/assets/css/layout.css
@@ -1775,7 +1775,7 @@ button,
 }
 
   .item header {
-    background: rgba(180, 178, 178, 0.555);
+    background: rgba(61, 59, 59, 0.555);
     margin: 0;
     padding: 1em 0 1em 0;
     font-size: 0.8em;
@@ -1793,7 +1793,7 @@ button,
 
   .icon:before {
     display: inline-block;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Fontawesome;
     font-size: 1.25em;
     text-decoration: none;
     font-style: normal;
@@ -1859,7 +1859,7 @@ button,
   }
 
     #header .icons a {
-      color: #41484c;
+      color: #2f3233;
       -moz-transition: color 0.35s ease-in-out;
       -webkit-transition: color 0.35s ease-in-out;
       -ms-transition: color 0.35s ease-in-out;
@@ -1932,7 +1932,7 @@ button,
         #nav ul li a span:before {
           position: absolute;
           left: 0;
-          color: #41484c;
+          color: #333638;
           text-align: center;
           width: 1.25em;
           line-height: 1.75em;
