--- a/public/starter-code/assets/css/layout.css
+++ b/public/starter-code/assets/css/layout.css
@@ -7,6 +7,15 @@
   max-width: 100%;
   width: 1400px;
 }
+#top .container{
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+  z-index: 1;
+  margin: 0 auto 0 auto;
+}
 
   @media screen and (min-width: 961px) and (max-width: 1880px) {
 
