--- a/public/starter-code/assets/css/module.css
+++ b/public/starter-code/assets/css/module.css
@@ -10,7 +10,7 @@
     padding: 4em 0;
     box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
     text-align: center;
-    background-image: url("images/overlay.png");
+    /* background-image: url("images/overlay.png"); */
   }
 
     #main > section.dark {
@@ -36,15 +36,19 @@
           border-bottom-color: rgba(255, 255, 255, 0);
         }
 
-    #main > section.cover {
-      padding: 10em 0;
-      background-size: cover;
-      background-position: center center;
+    #video{
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      min-width: 100%; 
+      min-height: au;
+      z-index: -1;
     }
+    
 
     #main > section.one {
-      background-color: #81918E;
-      background-image: url("../../images/banner.jpg");
+      /* background-color: #81918E;
+      background-image: url("../../images/banner.jpg"); */
     }
 
     #main > section.two {
